Chore: add min-height for dialog to avoid collapsing
Former-commit-id: bb723ddbf69ac8c41c9ac074c5d9a91fab78030a

--- a/components/dialog/dialog.css
+++ b/components/dialog/dialog.css
@@ -21,6 +21,7 @@
 .content {
   min-width: calc(unit * 50);
   max-width: calc(unit * 53);
+  min-height: calc(unit * 20);
   overflow-wrap: break-word;
 
   max-height: calc(100% - calc(unit * 8 + 2px));
